# cleona-chat

./: .dry-run-passed  .gitignore  .push-approved  .push-completed  CHANGELOG.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  dart_test.yaml  pubspec.yaml
.github/workflows/: cross-node-test.yml  ios-build.yml  macos-integration-test.yml  screenshots.yml
android/app/: build.gradle.kts
assets/: cleona_maintainer_public.pem
assets/nat_wizard/: router_db.json
docs/: ARCHITECTURE.md  ARCHIVE.md  CALLS.md  CHANNELS.md  CRYPTO.md  IDENTITY.md  MACOS_BUILD.md  MESSAGING.md  NETWORK.md  PROTOCOL.md  PUBLISHING.md  RECOVERY.md  ROUTING_V3.md  SECURITY_WHITEPAPER.md  TODO.md  UI.md
docs/design/: skins-final-browser-preview.html
integration_test/: app_test.dart  app_test_ci.dart  test_guardian.dart  test_i18n.dart  test_mldsa_derand.dart  test_node1.dart  test_node2.dart  test_offline.dart  test_recovery.dart
ios/: ExportOptions.plist  Podfile
ios/CleonaNative/: CleonaNative.h  CleonaNative.podspec  CleonaNativeDummy.m  cleona_exported_symbols.txt  force_symbols.c
ios/Runner/: AppDelegate.swift  BackgroundFetchHandler.swift  CameraHandler.swift  Info.plist  KeyringHandler.swift  cleona_udp_ios.c
ios/Runner.xcodeproj/: project.pbxproj
lib/: headless.dart  main.dart  service_daemon.dart
lib/core/archive/: archive_config.dart  archive_manager.dart  archive_placeholder.dart  archive_transport.dart  archive_types.dart  voice_transcription_config.dart  voice_transcription_service.dart  voice_transcription_types.dart  whisper_ffi.dart
lib/core/calendar/: calendar_manager.dart  ical_engine.dart  recurrence_engine.dart  reminder_service.dart
lib/core/calls/: audio_engine.dart  audio_engine_shim.dart  audio_mixer.dart  audio_permissions.dart  audio_permissions_flutter.dart  audio_permissions_stub.dart  bandwidth_estimator.dart  call_manager.dart  foreground_service.dart  foreground_service_flutter.dart  foreground_service_stub.dart  group_call_manager.dart  group_call_session.dart  group_video_receiver.dart  jitter_buffer.dart  lan_multicast.dart  media_relay.dart  opus_ffi.dart  overlay_tree.dart  rtt_measurement.dart  video_capture_android.dart  video_capture_linux.dart  video_engine.dart  video_preset.dart  vpx_ffi.dart
lib/core/channels/: contact_issue_reporter.dart  crash_reporter.dart  feature_request_helper.dart  system_channel_records.dart  system_channels.dart
lib/core/crypto/: admission_pow.dart  constant_time.dart  device_kem.dart  device_keys_store.dart  device_signature.dart  file_encryption.dart  hd_wallet.dart  kem_benchmark.dart  key_migration.dart  keyring_mobile.dart  keyring_service.dart  linkable_ring_signature.dart  network_secret.dart  oqs_ffi.dart  per_message_kem.dart  pq_isolate.dart  proof_of_work.dart  secp256k1_schnorr.dart  secure_memory.dart  seed_phrase.dart  shamir_sss.dart  sodium_ffi.dart
lib/core/dht/: channel_index.dart  dht_rpc.dart  kbucket.dart  mailbox_store.dart
lib/core/erasure/: erasure_placement.dart  reed_solomon.dart
lib/core/i18n/: app_locale.dart  translations.dart
lib/core/identity/: identity_dht_registry.dart  identity_manager.dart
lib/core/identity_resolution/: auth_manifest.dart  device_delegation.dart  device_kem_record.dart  identity_dht_handler.dart  identity_publisher.dart  identity_resolver.dart  linked_device_keys.dart  linked_device_keys_store.dart  liveness_record.dart  rotation_co_auth.dart
lib/core/ipc/: ipc_client.dart  ipc_messages.dart  ipc_server.dart
lib/core/media/: clipboard_helper.dart  link_preview_fetcher.dart
lib/core/moderation/: jury_selection.dart  moderation_config.dart  reachability_check.dart  sybil_transport_validator.dart  verdict_verifier.dart
lib/core/network/: ack_tracker.dart  android_udp_sender.dart  channel_uri.dart  clogger.dart  compression.dart  contact_seed.dart  dv_routing.dart  (+27 more)
lib/ui/: date_format.dart
linux/: CMakeLists.txt  cleona.desktop
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: DebugProfile.entitlements  Info.plist  MainFlutterWindow.swift  Release.entitlements
macos/Runner.xcodeproj/: project.pbxproj
manual/ar/: MANUAL.md
manual/bg/: MANUAL.md
manual/cs/: MANUAL.md
manual/da/: MANUAL.md
manual/de/: BENUTZERHANDBUCH.md
manual/el/: MANUAL.md
manual/en/: MANUAL.md  USER_MANUAL.md
manual/es/: MANUAL.md
manual/fa/: MANUAL.md
manual/fi/: MANUAL.md
manual/fr/: MANUAL.md
manual/he/: MANUAL.md
manual/hi/: MANUAL.md
manual/hr/: MANUAL.md
manual/hu/: MANUAL.md
manual/id/: MANUAL.md
manual/it/: MANUAL.md
manual/ja/: MANUAL.md
manual/ko/: MANUAL.md
manual/ms/: MANUAL.md
manual/nl/: MANUAL.md
manual/no/: MANUAL.md
manual/pl/: MANUAL.md
manual/pt/: MANUAL.md
manual/ro/: MANUAL.md
manual/ru/: MANUAL.md
manual/sk/: MANUAL.md
manual/sr/: MANUAL.md
manual/sv/: MANUAL.md
manual/th/: MANUAL.md
manual/tr/: MANUAL.md
manual/uk/: MANUAL.md
manual/vi/: MANUAL.md
manual/zh/: MANUAL.md
native/: v4l2_shim.c  vpx_shim.c
native/cleona_audio/: CMakeLists.txt  cleona_audio.c  cleona_audio.h  cleona_audio_ring.c  cleona_audio_ring.h  miniaudio_impl.c
native/cleona_audio/cmake/: FindSpeexDSP.cmake
native/cleona_audio/test/: CMakeLists.txt  test_loopback.c  test_ring.c
native/cleona_net/: .gitignore  CMakeLists.txt  README.md
native/cleona_net/include/: cleona_net.h
native/cleona_net/src/: cleona_net.c
native/cleona_pow/: CMakeLists.txt  cleona_pow.c
proto/: cleona.proto
scripts/: build-android-libs.sh  build-ios-libs.sh  build-linux-packages.sh  build-macos-libs.sh  build-vpx-shim.sh  check_i18n_complete.dart  check_ios_exports.sh  ci-export-seeds.py  ci-ipc-watcher.py  cleona.service  deploy-macos-app.sh  git-pre-commit-i18n-hook.sh  install-desktop.sh  sign-release.sh  sign-update-manifest.sh  skins-placeholders.sh
snap/: snapcraft.yaml
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/installer/: cleona-setup.iss
windows/runner/: CMakeLists.txt  Runner.rc  main.cpp
(+135 files in other folders)
